# internal/features/users/transport/http/get_users.go
@@ -1,8 +1,8 @@
 package users_transport_http
 
 import (
-	"fmt"
 	"net/http"
+	"strconv"
 
 	core_logger "github.com/MmGrand/TodoApp/internal/core/logger"
 	core_http_request "github.com/MmGrand/TodoApp/internal/core/transport/http/request"
@@ -19,15 +19,16 @@ type GetUsersResponse []UserDTOResponse
 // @Param limit query int false "Максимальное количество пользователей в ответе (1–200, по умолчанию 50)"
 // @Param offset query int false "Количество пропускаемых пользователей"
 // @Success 200 {object} GetUsersResponse "Список пользователей"
+// @Header 200 {integer} X-Total-Count "Общее количество пользователей"
 // @Failure 400 {object} core_http_response.ErrorResponse "Bad request"
 // @Failure 500 {object} core_http_response.ErrorResponse "Internal server error"
 // @Router /users [get]
-func (h *UserHTTPHandler) GetUsers(rw http.ResponseWriter, r *http.Request) {
+func (h *UsersHTTPHandler) GetUsers(rw http.ResponseWriter, r *http.Request) {
 	ctx := r.Context()
 	log := core_logger.FromContext(ctx)
 	responseHandler := core_http_response.NewHTTPResponseHandler(log, rw)
 
-	limit, offset, err := getLimitOffsetQueryParams(r)
+	limit, offset, err := core_http_request.GetLimitOffsetQueryParams(r)
 	if err != nil {
 		responseHandler.ErrorResponse(
 			err,
@@ -37,7 +38,7 @@ func (h *UserHTTPHandler) GetUsers(rw http.ResponseWriter, r *http.Request) {
 		return
 	}
 
-	userDomains, err := h.usersService.GetUsers(ctx, limit, offset)
+	userDomains, total, err := h.usersService.GetUsers(ctx, limit, offset)
 	if err != nil {
 		responseHandler.ErrorResponse(
 			err,
@@ -49,23 +50,7 @@ func (h *UserHTTPHandler) GetUsers(rw http.ResponseWriter, r *http.Request) {
 
 	response := GetUsersResponse(usersDTOFromDomains(userDomains))
 
+	rw.Header().Set(core_http_response.TotalCountHeader, strconv.Itoa(total))
+
 	responseHandler.JSONResponse(response, http.StatusOK)
-}
-
-func getLimitOffsetQueryParams(r *http.Request) (*int, *int, error) {
-	const (
-		limitQueryParamKey  = "limit"
-		OffsetQueryParamKey = "offset"
-	)
-	limit, err := core_http_request.GetIntQueryParam(r, limitQueryParamKey)
-	if err != nil {
-		return nil, nil, fmt.Errorf("get 'limit' query param: %w", err)
-	}
-
-	offset, err := core_http_request.GetIntQueryParam(r, OffsetQueryParamKey)
-	if err != nil {
-		return nil, nil, fmt.Errorf("get 'offset' query param: %w", err)
-	}
-
-	return limit, offset, nil
 }
